# librob

./: .gitignore  readme.md
behaviour/: CMakeLists.txt  package.xml
behaviour/launch/: behaviour.launch
behaviour/scripts/: behaviour_node.py  events.py  messages.py  state.py  state_machine.py
db_adapter/: CMakeLists.txt  package.xml
db_adapter/launch/: db_adapter.launch
db_adapter/scripts/: db_adapter_node.py  db_client.py  db_server.py  db_server2.py
db_adapter/srv/: db_comms.srv
essai/: CMakeLists.txt  package.xml
essai/scripts/: main.py
learning_joy/: CMakeLists.txt  package.xml
librarian_msgs/: CMakeLists.txt  package.xml
librarian_msgs/msg/: UI.msg  UI_feedback.msg  lift.msg  state.msg
librarian_msgs/srv/: book_locator.srv  db_request.srv
librob/: CMakeLists.txt  package.xml
librob/launch/: start_laptop.launch  start_local.launch  start_pi.launch
locator/: CMakeLists.txt  lib_ICL_5_floor.yaml  package.xml
locator/data/: 4th_floor.yml  4th_floor_raw.yml  demo_5th_floor.yaml  lib_ICL_5_floor.yaml
locator/launch/: locator.launch
locator/scripts/: lib_ICL_5_floor.yaml  locator.py  locator_node.py
move/: CMakeLists.txt  package.xml
navigation/: CMakeLists.txt  package.xml
navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
navigation/launch/: config.launch  (+9 more)
route/: CMakeLists.txt  package.xml
speech/: CMakeLists.txt  package.xml
teleop/: CMakeLists.txt  package.xml
test/: CMakeLists.txt  package.xml
visual_ui/: CMakeLists.txt  package.xml
(+63 files in other folders)
